# briefing-officer

./: .containerignore  .env  .env.example  .gitignore  .prettierignore  .prettierrc.json  ADRs.md  AGENTS.md  CHANGELOG.md  Cargo.toml  Containerfile  LICENSE  README.md  eslint.config.mjs  next.config.mjs  opencode.json  package-lock.json  package.json  playwright.config.ts  playwright.screenshots.config.ts  prisma.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/: dependabot.yaml  release-please-config.json  renovate.json
.github/workflows/: build-and-test.yaml  build.yaml  cleanup-container-images.yaml  container-image.yaml  dependabot-auto-merge.yaml  format.yaml  lint.yaml  publish-helm-chart.yaml.yml  release-please.yaml  static-analysis.yaml
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  deployment.yaml  httproute.yaml  ingress.yaml  networkpolicy.yaml  pvc.yaml  secret.yaml  service.yaml
migrations/: 0001_init.sql
prisma/: schema.prisma  seed.ts
scripts/: screenshots.spec.ts
src/: db.rs  main.rs  middleware.ts  models.rs  proxy.ts  worker.rs
src/ai/: mod.rs
src/api/: handlers.rs
src/app/: actions.ts  globals.css  layout.tsx  page.tsx
src/components/: AddFeed.tsx  AddFeedButton.tsx  BackButton.tsx  IntlDateTime.tsx  IntlRelativeTime.tsx  RefreshFeedButton.tsx  ToggleReadButton.tsx  intl-date-time.tsx  intl-relative-time.tsx  theme-mode-toggle.tsx
src/frontend/: app.rs
src/hooks/: use-date-formatters.ts
tests/: navigation-sidebar.spec.ts
(+309 files in other folders)
